[package]
name = "zephyr-verify-bulletproofs"
version = "0.1.0"
edition = "2021"
LICENSE = "MIT"

[dependencies]
rand_core = "0.6"

hex = "0.4"
serde = "1"
serde_json = "1"

monero-serai = { git = "https://github.com/serai-dex/serai" }
monero-rpc = { git = "https://github.com/serai-dex/serai" }
monero-simple-request-rpc = { git = "https://github.com/serai-dex/serai" }

tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
